# hpc_for_data_science_2023-2024

./: .gitignore  README.md  syllabus.md
.github/workflows/: md-to-pages.yml
assignment/: README.md  jacobi_gpu.ipynb  jacobi_gpu.py
exercises/01/: 01-intro.md
lectures/01/: 01-1-unix.md  01-2-git.md  01-3-envs.md  01-intro.md
lectures/02/: 02-1-docs.md  02-2-tests.md  02-good.md
notes/: README.md
notes/01/: 01-1-unix.md  01-2-git.md
notes/02/: 02-1-envs.md  02-2-dist.md  02-3-github.md  02-3-tests.md  02-4-docs.md
practical/01/: 01-intro.md  01-package.md  pyproject.toml
practical/02/: 02-0-exercises.md  02-1-gpus.md  02-1-nnotebooks.md  02-2-lightning.md  02-3-scaling.md  example.ipynb
practical/02/example_cuda_kernel/: add_arrays_gpu.ipynb  add_arrays_gpu.py
slides/01/: 01-intro.md
slides/01/images/: 01_build_process_src.txt
slides/02/: 02-coding.md  02-good.md
slides/03/: 03-parallel.md  03-performance.md
slides/04/: 04-parallel.md  LICENSE_CC-BY-NC-SA-4.0.md
style/: custom.css
